Revert "SONARPY-1231 Cache CPD tokens (#1325)"
This reverts commit 6690d959190b06e336288efeedccc300064eb728.